# CahnLang

./: Cargo.toml  ast-generator.js  ast-generator.mjs  fizzbuzz.cahn  plus.cahn  test.cahn  todolist.txt
cahn_test_files/: fizzbuzz.cahn  functions.cahn
cahns/: arrays.cahn  fizzbuzz.cahn  functions.cahn  if_else.cahn
src/: lib.rs  main.rs
src/compiler/: ast.rs  mod.rs
src/compiler/ast/: expr.rs  stmt.rs
src/compiler/codegen/: codegenerator.rs  error.rs  mod.rs
src/compiler/lexical_analysis/: lexer.rs  mod.rs  token.rs
src/compiler/string_handling/: mod.rs  string_interner.rs
src/compiler/syntactical_analysis/: error.rs  mod.rs  parser.rs  parser_error.rs
src/executable/: function.rs  instructions.rs  mod.rs
src/runtime/: error.rs  mem_manager.rs  mod.rs  value.rs  vm.rs
src/utils/: byte_buffer_reader.rs  mod.rs
tests/: big_num_load.rs  codegen.rs  full_run.rs  full_run_math.rs  function.rs  hash.rs  if.rs  interner.rs  parsing_test.rs  vm.rs
