[package]
name = "cahn_lang"
version = "0.1.0"
authors = ["CyberCat3 <andreas17349@hmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
ahash = "*"
bumpalo= { version = "*", features = [ "collections" ] }
intmap = "*"

[profile.release]
lto = "on"